[tool.poetry]
name = "flaskapp"
version = "0.1.0"
description = ""
authors = ["lucca vinicios <vini.lucca42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
